--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css\main.min.css">
+  <script src="https://kit.fontawesome.com/ac19cd6eba.js" crossorigin="anonymous"></script>
   <title>Design</title>
 </head>
+
 <body>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+  <div class="navigation container">
+    <div class="logo">
+      <h1>YOUR LOGO</h1>
+    </div>
+    <nav>
+      <a href="#">HOME</a>
+      <a href="#">SHOP</a>
+      <a href="#">LOOKBOOK</a>
+      <a href="#">FEATURES</a>
+      <a href="#">PAGES</a>
+      <a href="#">BLOG</a>
+    </nav>
+    <div class="navigation_menu">
+      <button type="button" name="search"><i class="fas fa-search"></i></button>
+      <button type="button" name="favorites"><i class="far fa-heart"></i></button>
+      <button type="button" name="shopping-cart"><i class="fas fa-shopping-cart"></i></button>
+    </div>
+  </div>
 
 </body>
+
 </html>
