--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href="#">PAGES</a>
       <a href="#">BLOG</a>
     </nav>
-    <div class="navigation_menu">
+    <div class="navigation__menu">
       <button type="button" name="search"><i class="fas fa-search"></i></button>
       <button type="button" name="favorites"><i class="far fa-heart"></i></button>
       <button type="button" name="shopping-cart"><i class="fas fa-shopping-cart"></i></button>
