--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
     </div>
   </div>
 
+
+  <header id="header">
+    <div class="header__content">
+      <h3>NEW TREND</h3>
+      <h1>COLLUSION</h1>
+      <h4>An exclusive selection of this season's trends.</h4>
+      <div class="header__buttons">
+        <button type="button" name="DISCOVER">DISCOVER</button>
+        <button type="button" name="SHOP">SHOP NOW</button>
+      </div>
+    </div>
+  </header>
+
 </body>
 
 </html>
